Paco/src/com/google/android/apps/paco/questioncondparser/QuestionCondition.g
grammar QuestionCondition;
@header {
package com.google.android.apps.paco.questioncondparser;
}
@lexer::header {
package com.google.android.apps.paco.questioncondparser;
}
@members {
   Environment environment;
   public QuestionConditionParser(TokenStream input, Environment environment) {
       this(input);
       this.environment = environment;
   }
}


comparison  returns [boolean value]
   : question_part LT i=INTEGER { $value = environment.getValue($question_part.text) != null && environment.getValue($question_part.text) < Integer.parseInt($i.text); }
   | question_part GT i=INTEGER { $value = environment.getValue($question_part.text) != null && environment.getValue($question_part.text) > Integer.parseInt($i.text); }
   | question_part EQ i=INTEGER { $value = environment.getValue($question_part.text) != null && environment.getValue($question_part.text) == Integer.parseInt($i.text); }
   | question_part NE i=INTEGER { $value = environment.getValue($question_part.text) != null && environment.getValue($question_part.text) != Integer.parseInt($i.text); }
   ;

expression returns [boolean value]
   :   c=comparison {$value = $c.value;}
   ( OR c1=comparison {$value = $value || $c1.value; }
   | AND c1=comparison {$value = $value && $c1.value; }
   )*
   ;

question_part
:QUESTION_NAME { if (!environment.exists($QUESTION_NAME.text)) {
       throw new IllegalArgumentException("unknown reference: " + $QUESTION_NAME.text);
   }
   if (!environment.correctType($QUESTION_NAME.text)) {
     throw new IllegalArgumentException("Does not have an integer response type: " + $QUESTION_NAME.text);
   }}
       ;

OR : '||' ;
AND : '&&' ;
QUESTION_NAME
 :     ('a'..'z'|'A'..'Z'|'_') ('a'..'z'|'A'..'Z'|'0'..'9'|'_')*
   ;

INTEGER :       '0'..'9'+
   ;

COMMENT
   :   '//' ~('\n'|'\r')* '\r'? '\n' {$channel=HIDDEN;}
   |   '/*' ( options {greedy=false;} : . )* '*/' {$channel=HIDDEN;}
   ;

WS  :   ( ' '
       | '\t'
       | '\r'
       | '\n'
       ) {$channel=HIDDEN;}
   ;

STRING
   :  '"' ( ESC_SEQ | ~('\\'|'"') )* '"'
   ;

CHAR:  '\'' ( ESC_SEQ | ~('\''|'\\') ) '\''
   ;

fragment
HEX_DIGIT : ('0'..'9'|'a'..'f'|'A'..'F') ;

fragment
ESC_SEQ
   :   '\\' ('b'|'t'|'n'|'f'|'r'|'\"'|'\''|'\\')
   |   UNICODE_ESC
   |   OCTAL_ESC
   ;

fragment
OCTAL_ESC
   :   '\\' ('0'..'3') ('0'..'7') ('0'..'7')
   |   '\\' ('0'..'7') ('0'..'7')
   |   '\\' ('0'..'7')
   ;

fragment
UNICODE_ESC
   :   '\\' 'u' HEX_DIGIT HEX_DIGIT HEX_DIGIT HEX_DIGIT
   ;



EQ      :        '=' | '==';
LT      :        '<';
GT      :        '>';
NE      :       '!=' ;
